# minas

ethercat_manager/include/ethercat_manager/: ethercat_manager.h
ethercat_manager/src/: ethercat_manager.cpp
gx_control/: CMakeLists.txt  gx_control_plugin.xml  package.xml
gx_control/include/gx_control/: gx_client.h  gx_driver_controller.h
gx_control/msg/: DigitalIO.msg
gx_control/src/: gx_client.cpp  gx_driver_controller.cpp  simple_test.cpp  slaveinfo.cpp
minas_control/: CMakeLists.txt  package.xml
minas_control/doc/: index.rst
minas_control/include/minas_control/: minas_client.h  minas_hardware_interface.h
minas_control/launch/: minas_control.launch
minas_control/src/: minas_client.cpp  minas_hardware_interface.cpp  reset.cpp  simple_test.cpp  slaveinfo.cpp
tra1_bringup/: package.xml
tra1_bringup/config/: tra1_controllers.yaml
tra1_bringup/launch/: tra1_bringup.launch
tra1_description/urdf/: tra1.xacro
