<?xml version="1.0"?>
<package>
  <name>gx_control</name>
  <version>1.0.3</version>
  <description>The gx_control package</description>

  <maintainer email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Developer 534</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ethercat_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>ethercat_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <controller_interface plugin="${prefix}/gx_control_plugin.xml"/>
  </export>

</package>
